WIP - Making a gh-pages deployable app + fixing some css issues on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,8 @@
 
 .new-game-input,
 .new-game-btn {
-  margin: 10px;
-  width: 400px;
+  margin: 10px 0;
+  width: 200px;
   display: flex;
   flex-direction: row;
 }
@@ -22,12 +22,12 @@
   justify-content: space-between;
 }
 
-.new-game-btn {
-  justify-content: center;
+.new-game-input input {
+  width: 40px;
 }
 
-.new-game-input label {
-  margin-right: 20px;
+.new-game-btn {
+  justify-content: center;
 }
 
 .game-screen {
